; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_stext-output.c_fz_print_style_begin_html.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_stext-output.c_fz_print_style_begin_html.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [6 x i8] c"<sup>\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"<tt>\00", align 1
@.str.2 = private unnamed_addr constant [4 x i8] c"<b>\00", align 1
@.str.3 = private unnamed_addr constant [4 x i8] c"<i>\00", align 1
@.str.4 = private unnamed_addr constant [43 x i8] c"<span style=\22font-family:%s;font-size:%gpt\00", align 1
@.str.5 = private unnamed_addr constant [13 x i8] c";color:#%06x\00", align 1
@.str.6 = private unnamed_addr constant [3 x i8] c"\22>\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i32*, float, i32, i32)* @fz_print_style_begin_html to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fz_print_style_begin_html(i32* %0, i32* %1, i32* %2, float %3, i32 %4, i32 %5) #0 {
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca float, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca [80 x i8], align 16
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  store i32* %0, i32** %7, align 8
  store i32* %1, i32** %8, align 8
  store i32* %2, i32** %9, align 8
  store float %3, float* %10, align 4
  store i32 %4, i32* %11, align 4
  store i32 %5, i32* %12, align 4
  %18 = load i32*, i32** %7, align 8
  %19 = load i32*, i32** %9, align 8
  %20 = call i32 @fz_font_is_bold(i32* %18, i32* %19)
  store i32 %20, i32* %14, align 4
  %21 = load i32*, i32** %7, align 8
  %22 = load i32*, i32** %9, align 8
  %23 = call i32 @fz_font_is_italic(i32* %21, i32* %22)
  store i32 %23, i32* %15, align 4
  %24 = load i32*, i32** %7, align 8
  %25 = load i32*, i32** %9, align 8
  %26 = call i32 @fz_font_is_serif(i32* %24, i32* %25)
  store i32 %26, i32* %16, align 4
  %27 = load i32*, i32** %7, align 8
  %28 = load i32*, i32** %9, align 8
  %29 = call i32 @fz_font_is_monospaced(i32* %27, i32* %28)
  store i32 %29, i32* %17, align 4
  %30 = load i32*, i32** %7, align 8
  %31 = load i32*, i32** %9, align 8
  %32 = getelementptr inbounds [80 x i8], [80 x i8]* %13, i64 0, i64 0
  %33 = load i32, i32* %17, align 4
  %34 = load i32, i32* %16, align 4
  %35 = call i32 @font_family_name(i32* %30, i32* %31, i8* %32, i32 80, i32 %33, i32 %34)
  %36 = load i32, i32* %11, align 4
  %37 = icmp ne i32 %36, 0
  br i1 %37, label %38, label %42

38:                                               ; preds = %6
  %39 = load i32*, i32** %7, align 8
  %40 = load i32*, i32** %8, align 8
  %41 = call i32 @fz_write_string(i32* %39, i32* %40, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0))
  br label %42

42:                                               ; preds = %38, %6
  %43 = load i32, i32* %17, align 4
  %44 = icmp ne i32 %43, 0
  br i1 %44, label %45, label %49

45:                                               ; preds = %42
  %46 = load i32*, i32** %7, align 8
  %47 = load i32*, i32** %8, align 8
  %48 = call i32 @fz_write_string(i32* %46, i32* %47, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0))
  br label %49

49:                                               ; preds = %45, %42
  %50 = load i32, i32* %14, align 4
  %51 = icmp ne i32 %50, 0
  br i1 %51, label %52, label %56

52:                                               ; preds = %49
  %53 = load i32*, i32** %7, align 8
  %54 = load i32*, i32** %8, align 8
  %55 = call i32 @fz_write_string(i32* %53, i32* %54, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.2, i64 0, i64 0))
  br label %56

56:                                               ; preds = %52, %49
  %57 = load i32, i32* %15, align 4
  %58 = icmp ne i32 %57, 0
  br i1 %58, label %59, label %63

59:                                               ; preds = %56
  %60 = load i32*, i32** %7, align 8
  %61 = load i32*, i32** %8, align 8
  %62 = call i32 @fz_write_string(i32* %60, i32* %61, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.3, i64 0, i64 0))
  br label %63

63:                                               ; preds = %59, %56
  %64 = load i32*, i32** %7, align 8
  %65 = load i32*, i32** %8, align 8
  %66 = getelementptr inbounds [80 x i8], [80 x i8]* %13, i64 0, i64 0
  %67 = load float, float* %10, align 4
  %68 = fpext float %67 to double
  %69 = call i32 (i32*, i32*, i8*, ...) @fz_write_printf(i32* %64, i32* %65, i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str.4, i64 0, i64 0), i8* %66, double %68)
  %70 = load i32, i32* %12, align 4
  %71 = icmp ne i32 %70, 0
  br i1 %71, label %72, label %77

72:                                               ; preds = %63
  %73 = load i32*, i32** %7, align 8
  %74 = load i32*, i32** %8, align 8
  %75 = load i32, i32* %12, align 4
  %76 = call i32 (i32*, i32*, i8*, ...) @fz_write_printf(i32* %73, i32* %74, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.5, i64 0, i64 0), i32 %75)
  br label %77

77:                                               ; preds = %72, %63
  %78 = load i32*, i32** %7, align 8
  %79 = load i32*, i32** %8, align 8
  %80 = call i32 (i32*, i32*, i8*, ...) @fz_write_printf(i32* %78, i32* %79, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.6, i64 0, i64 0))
  ret void
}

declare dso_local i32 @fz_font_is_bold(i32*, i32*) #1

declare dso_local i32 @fz_font_is_italic(i32*, i32*) #1

declare dso_local i32 @fz_font_is_serif(i32*, i32*) #1

declare dso_local i32 @fz_font_is_monospaced(i32*, i32*) #1

declare dso_local i32 @font_family_name(i32*, i32*, i8*, i32, i32, i32) #1

declare dso_local i32 @fz_write_string(i32*, i32*, i8*) #1

declare dso_local i32 @fz_write_printf(i32*, i32*, i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
